--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   },
   "dependencies": {
     "astro": "^3.3.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0",
+    "eslint-plugin-astro": "^0.29.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1"
   }
 }
