Add components, baseLayout, and dark mode

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "genderswap.fm",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,13 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.0.2",
     "@astrojs/vercel": "^5.0.2",
-    "astro": "^3.3.2"
+    "@radix-ui/colors": "^3.0.0",
+    "astro": "^3.3.2",
+    "dayjs": "^1.11.10",
+    "sass": "^1.69.4"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
     "eslint-plugin-astro": "^0.29.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1"
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0"
   }
 }
