--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@astrojs/sitemap": "^3.0.2",
     "@astrojs/vercel": "^5.0.2",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@spotify/web-api-ts-sdk": "^1.1.2",
     "@supabase/supabase-js": "^2.38.2",
     "@types/react": "^18.2.31",
