--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-hook-form": "^7.47.0",
     "react-textarea-autosize": "^8.5.3",
     "sass": "^1.69.4",
+    "satori": "^0.10.9",
+    "sharp": "^0.32.6",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
