--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "downshift": "^8.2.2",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
