Svelte CoverCard components

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -19,7 +19,7 @@
   "useTabs": false,
   "embeddedLanguageFormatting": "auto",
   "vueIndentScriptAndStyle": false,
-  "plugins": ["prettier-plugin-astro"],
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-svelte"],
   "overrides": [
     {
       "files": "*.astro",
