--- a/package.json
+++ b/package.json
@@ -13,36 +13,35 @@
     "format": "prettier --plugin-search-dir . --write .",
     "test:integration": "playwright test",
     "test:unit": "vitest",
-    "dbtypegen": "supabase gen types typescript --project-id qbmycnemttkukygnvmbu > src/types/db-generated.types.ts",
-    "postbuild": "npx svelte-sitemap --out-dir .vercel/output/static --domain https://genderswap.fm"
+    "dbtypegen": "supabase gen types typescript --project-id qbmycnemttkukygnvmbu > src/types/db-generated.types.ts"
   },
   "devDependencies": {
     "@iconify-json/ri": "^1.1.12",
     "@melt-ui/pp": "^0.1.4",
     "@melt-ui/svelte": "^0.61.2",
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-vercel": "^3.0.3",
-    "@sveltejs/kit": "^1.20.4",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
+    "@playwright/test": "^1.40.0",
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/adapter-vercel": "^3.1.0",
+    "@sveltejs/kit": "^1.27.6",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-svelte": "^2.35.0",
     "mdsvex": "^0.11.0",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.69.5",
-    "supabase": "^1.110.1",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
+    "supabase": "^1.112.0",
+    "svelte": "^4.2.5",
+    "svelte-check": "^3.6.0",
     "svelte-sequential-preprocessor": "^2.0.1",
     "sveltekit-superforms": "^1.10.2",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "unplugin-icons": "^0.17.3",
-    "vite": "^4.4.2",
-    "vitest": "^0.32.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "unplugin-icons": "^0.17.4",
+    "vite": "^4.5.0",
+    "vitest": "^0.32.4",
     "zod": "^3.22.4"
   },
   "type": "module",
@@ -51,8 +50,9 @@
     "@spotify/web-api-ts-sdk": "^1.1.2",
     "@supabase/supabase-js": "^2.38.4",
     "dayjs": "^1.11.10",
+    "satori": "^0.10.9",
+    "sharp": "^0.32.6",
     "svelte-autosize": "^1.1.0",
-    "svelte-preprocess": "^5.0.4",
-    "svelte-sitemap": "^2.6.0"
+    "svelte-preprocess": "^5.1.0"
   }
 }
