--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@spotify/web-api-ts-sdk": "^1.1.2",
     "@supabase/supabase-js": "^2.38.4",
+    "@vercel/analytics": "^1.1.1",
     "dayjs": "^1.11.10",
     "satori": "^0.10.9",
     "sharp": "^0.32.6",
