--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "@radix-ui/colors": "^3.0.0",
     "@spotify/web-api-ts-sdk": "^1.1.2",
     "@supabase/supabase-js": "^2.38.4",
+    "@types/canvas-confetti": "^1.6.3",
     "@vercel/analytics": "^1.1.1",
+    "canvas-confetti": "^1.9.1",
     "dayjs": "^1.11.10",
     "satori": "^0.10.9",
     "sharp": "^0.32.6",
