Add env CI: true

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,3 +24,5 @@ jobs:
         run: pnpm check
       - name: Run Playwright tests
         run: pnpm test:integration
+        env:
+          CI: true
