--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,8 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm i
+      - name: Install Playwright Browsers
+        run: pnpm playwright install --with-deps
       - name: Typecheck
         run: pnpm check
       - name: Run Playwright tests
