--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "genderswap.fm",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -14,6 +15,19 @@
     "test:integration": "playwright test",
     "test:unit": "vitest",
     "dbtypegen": "supabase gen types typescript --project-id qbmycnemttkukygnvmbu > src/types/db-generated.types.ts"
+  },
+  "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
+    "@spotify/web-api-ts-sdk": "^1.1.2",
+    "@supabase/supabase-js": "^2.38.4",
+    "@types/canvas-confetti": "^1.6.3",
+    "@vercel/analytics": "^1.1.1",
+    "dayjs": "^1.11.10",
+    "satori": "^0.10.9",
+    "sharp": "^0.32.6",
+    "svelte-autosize": "^1.1.0",
+    "svelte-preprocess": "^5.1.0",
+    "tsparticles-confetti": "^2.12.0"
   },
   "devDependencies": {
     "@iconify-json/ri": "^1.1.12",
@@ -43,19 +57,5 @@
     "vite": "^4.5.0",
     "vitest": "^0.32.4",
     "zod": "^3.22.4"
-  },
-  "type": "module",
-  "dependencies": {
-    "@radix-ui/colors": "^3.0.0",
-    "@spotify/web-api-ts-sdk": "^1.1.2",
-    "@supabase/supabase-js": "^2.38.4",
-    "@types/canvas-confetti": "^1.6.3",
-    "@vercel/analytics": "^1.1.1",
-    "canvas-confetti": "^1.9.1",
-    "dayjs": "^1.11.10",
-    "satori": "^0.10.9",
-    "sharp": "^0.32.6",
-    "svelte-autosize": "^1.1.0",
-    "svelte-preprocess": "^5.1.0"
   }
 }
