--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,13 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    permissions:
+      # Required to checkout the code
+      contents: read
+      # Required to put a comment into the pull-request
+      pull-requests: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -35,6 +42,14 @@ jobs:
 
       - name: Run Vitest
         run: pnpm test:unit
+
+      - name: Run Vitest Coverage
+        run: pnpm test:unit-coverage
+
+      - name: 'Report Coverage'
+        # Also generate the report if tests are failing
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
 
       - name: Install Playwright browsers
         run: pnpm playwright install --with-deps
