--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@melt-ui/pp": "^0.1.4",
     "@melt-ui/svelte": "^0.61.2",
     "@playwright/test": "^1.40.0",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/adapter-vercel": "^3.1.0",
-    "@sveltejs/kit": "^1.27.6",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^4.0.0",
+    "@sveltejs/kit": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "@vitest/coverage-v8": "^0.34.6",
@@ -56,8 +56,9 @@
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "unplugin-icons": "^0.17.4",
-    "vite": "^4.5.1",
-    "vitest": "^0.32.4",
-    "zod": "^3.22.4"
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0",
+    "zod": "^3.22.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0"
   }
 }
