--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-vercel": "^4.0.0",
     "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.0.4",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-svelte": "^2.35.0",
@@ -53,13 +54,12 @@
     "svelte": "^4.2.5",
     "svelte-check": "^3.6.0",
     "svelte-sequential-preprocessor": "^2.0.1",
-    "sveltekit-superforms": "^1.10.2",
+    "sveltekit-superforms": "^1.12.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "unplugin-icons": "^0.17.4",
-    "vite": "^5.0.0",
-    "vitest": "^1.0.0",
-    "zod": "^3.22.4",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0"
+    "vite": "^5.0.9",
+    "vitest": "^1.0.4",
+    "zod": "^3.22.4"
   }
 }
