--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,33 @@ env:
   SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
   SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
 jobs:
-  test:
+  typecheck:
+    name: Typecheck
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Typecheck
+        run: pnpm check
+
+  unit:
+    name: Unit
     runs-on: ubuntu-latest
 
     permissions:
@@ -37,9 +63,6 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
-      - name: Typecheck
-        run: pnpm check
-
       - name: Run Vitest
         run: pnpm test:unit
 
@@ -50,6 +73,28 @@ jobs:
         # Also generate the report if tests are failing
         if: always()
         uses: davelosert/vitest-coverage-report-action@v2
+
+  e2e:
+    name: End-to-End
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm i
 
       - name: Install Playwright browsers
         run: pnpm playwright install --with-deps
