--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "prepare": "svelte-kit sync",
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -35,12 +36,13 @@
     "@melt-ui/pp": "^0.1.4",
     "@melt-ui/svelte": "^0.61.2",
     "@playwright/test": "^1.40.0",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/adapter-vercel": "^3.1.0",
-    "@sveltejs/kit": "^1.27.6",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^4.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.0.4",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-svelte": "^2.35.0",
@@ -52,12 +54,12 @@
     "svelte": "^4.2.5",
     "svelte-check": "^3.6.0",
     "svelte-sequential-preprocessor": "^2.0.1",
-    "sveltekit-superforms": "^1.10.2",
+    "sveltekit-superforms": "^1.12.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "unplugin-icons": "^0.17.4",
-    "vite": "^4.5.1",
-    "vitest": "^0.32.4",
+    "vite": "^5.0.9",
+    "vitest": "^1.0.4",
     "zod": "^3.22.4"
   }
 }
