--- a/package.json
+++ b/package.json
@@ -21,46 +21,46 @@
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
     "@spotify/web-api-ts-sdk": "^1.1.2",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/supabase-js": "^2.39.0",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.2",
     "dayjs": "^1.11.10",
-    "satori": "^0.10.9",
+    "satori": "^0.10.11",
     "sharp": "^0.32.6",
     "svelte-autosize": "^1.1.0",
-    "svelte-preprocess": "^5.1.0",
-    "tsparticles-confetti": "^2.12.0"
+    "svelte-preprocess": "^5.1.2",
+    "@tsparticles/confetti": "^3.0.2"
   },
   "devDependencies": {
-    "@iconify-json/ri": "^1.1.12",
+    "@iconify-json/ri": "^1.1.17",
     "@melt-ui/pp": "^0.1.4",
-    "@melt-ui/svelte": "^0.61.2",
-    "@playwright/test": "^1.40.0",
+    "@melt-ui/svelte": "^0.66.0",
+    "@playwright/test": "^1.40.1",
     "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-vercel": "^4.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^4.0.2",
+    "@sveltejs/kit": "^2.0.1",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@testing-library/svelte": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitest/coverage-v8": "^1.0.4",
-    "eslint": "^8.54.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-svelte": "^2.35.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "jsdom": "^23.0.1",
     "mdsvex": "^0.11.0",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.69.5",
-    "supabase": "^1.112.0",
-    "svelte": "^4.2.5",
-    "svelte-check": "^3.6.0",
+    "supabase": "^1.123.4",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
     "svelte-sequential-preprocessor": "^2.0.1",
     "sveltekit-superforms": "^1.12.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "unplugin-icons": "^0.17.4",
-    "vite": "^5.0.9",
+    "vite": "^5.0.10",
     "vitest": "^1.0.4",
     "zod": "^3.22.4"
   }
