--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -37,11 +37,10 @@ jobs:
         run: pnpm i
 
       - name: Build and start the project
-        run: pnpm build && pnpm preview
+        run: pnpm build
 
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v12
         with:
-          urls: http://localhost:4173
           uploadArtifacts: true
           temporaryPublicStorage: true
