--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview",
     "prepare": "svelte-kit sync",
     "test": "npm run test:integration && npm run test:unit",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json && biome check",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
+    "check:format": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json && biome check --write",
     "test:integration": "playwright test",
     "test:unit": "vitest",
     "test:unit-coverage": "vitest --coverage",
@@ -33,6 +32,7 @@
     "svelte-preprocess": "^6.0.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@iconify-json/ri": "^1.1.21",
     "@melt-ui/pp": "^0.3.2",
     "@melt-ui/svelte": "^0.83.0",
@@ -42,16 +42,9 @@
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@testing-library/svelte": "^5.2.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
     "@vitest/coverage-v8": "^2.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.41.0",
     "jsdom": "^24.1.0",
     "mdsvex": "^0.11.2",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.77.6",
     "supabase": "^1.178.2",
     "svelte": "^4.2.18",
