--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "@melt-ui/pp": "^0.3.2",
     "@melt-ui/svelte": "^0.86.0",
     "@playwright/test": "^1.48.2",
-    "@sveltejs/adapter-auto": "^3.3.1",
-    "@sveltejs/adapter-vercel": "^5.4.6",
+    "@sveltejs/adapter-netlify": "^4.3.6",
     "@sveltejs/kit": "^2.7.4",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@testing-library/svelte": "^5.2.4",
