--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,15 @@ name: Vitest
 
 on:
   push:
-    branches: main
+    branches: [main]
     paths: ['src/**/*', 'tests/**/*']
   pull_request:
-    branches: main
+    branches: [main]
     paths: ['src/**/*', 'tests/**/*']
+
+permissions:
+  contents: read
+  pull-requests: write
 
 env:
   PUBLIC_SUPABASE_URL: ${{ secrets.PUBLIC_SUPABASE_URL }}
@@ -130,35 +134,3 @@ jobs:
           name: test-results
           path: test-results/
           retention-days: 7
-
-  lighthouse:
-    name: Lighthouse
-    runs-on: ubuntu-latest
-    if: ${{ github.actor != 'dependabot[bot]' }}
-    env:
-      LHCI_BUILD_CONTEXT__CURRENT_HASH: ${{ github.event.pull_request.head.sha || github.sha }}
-      LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 8
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm i
-
-      - name: Lighthouse Mobile Audit
-        run: pnpm lhci:mobile
-
-      - name: Lighthouse Desktop Audit
-        run: pnpm lhci:desktop
